lamp-ingress/db.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: db
  name: db
  namespace: nginx-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: db
  template:
    metadata:
      labels:
        k8s-app: db
    spec:
      nodeSelector:
        role: master
      volumes:
      - name: shared-files
        hostPath:
          path: /root/lamp-ingress/data 
      containers:
      - name: db
        image: mariadb
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
          name: db
          protocol: TCP
        volumeMounts:                                                                                              
        - name: shared-files
          mountPath: /var/lib/mysql
          subPath: mariadb
      dnsPolicy: Default
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
        operator: Equal
