lamp-ingress/nginx.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: nginx
  name: nginx
  namespace: nginx-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: nginx
  template:
    metadata:
      labels:
        k8s-app: nginx
    spec:
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
      containers:
      - name: nginx
        image: nginx:1.7.9
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          #readOnly: true
