lamp-ingress/app1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: appsvc1
  namespace: nginx-ingress
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    k8s-app: php-fpm
