lamp-ingress/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: nginx-ingress
spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
    name: db
  selector:
    k8s-app: db
